test/bad/eblock-in.c
int main(void)
{
	/* A gratuitous nested block should cause parse error. */
	{
	}
}
